<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/full_margin"
    android:layout_marginBottom="@dimen/avoid_menu_margin"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <EditText
        android:id="@+id/edit_tex_invoice_nr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/full_margin"
        android:maxLines="1"
        android:hint="@string/number"
        android:inputType="text"
        android:textColor="@color/operand_buttons_bg" />

    <TextView
        android:id="@+id/text_view_bill_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bottom_line"
        android:text="@string/bill_from"
        android:textColor="@color/operand_buttons_bg"
        android:textSize="@dimen/body_text_size" />

    <EditText
        android:id="@+id/edit_text_bill_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginBottom="@dimen/full_margin"
        android:hint="@string/who_is_this_invoice_from"
        android:inputType="textPersonName"
        android:textColor="@color/operand_buttons_bg" />

    <TextView
        android:id="@+id/text_view_bill_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bottom_line"
        android:text="@string/bill_to"
        android:textColor="@color/operand_buttons_bg"
        android:textSize="@dimen/body_text_size" />

    <EditText
        android:id="@+id/edit_text_bill_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/full_margin"
        android:maxLines="1"
        android:hint="@string/who_is_this_invoice_to"
        android:inputType="textPersonName"
        android:textColor="@color/operand_buttons_bg" />

    <TextView
        android:layout_marginTop="@dimen/margin_top"
        android:id="@+id/text_view_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bottom_line"
        android:text="@string/terms"
        android:textColor="@color/operand_buttons_bg"
        android:textSize="@dimen/body_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Date"
            android:textColor="@color/operand_buttons_bg"
            android:textSize="@dimen/body_text_size" />

        <EditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:layout_weight="1"
            android:hint="@string/enter_the_date"
            android:textColor="@color/operand_buttons_bg"
            android:textSize="@dimen/body_text_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/due_date"
            android:textColor="@color/operand_buttons_bg"
            android:textSize="@dimen/body_text_size" />

        <EditText
            android:id="@+id/edit_text_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:layout_weight="3"
            android:hint="@string/enter_the_date"
            android:textColor="@color/operand_buttons_bg"
            android:textSize="@dimen/body_text_size" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_jobs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_line"
            android:text="Jobs done"
            android:layout_weight="1"
            android:textColor="@color/operand_buttons_bg"
            android:textSize="@dimen/body_text_size" />

        <TextView
            android:id="@+id/text_view_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_line"
            android:text="@string/rate"
            android:layout_weight="2"
            android:textColor="@color/operand_buttons_bg"
            android:textSize="@dimen/body_text_size" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_job1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/job_description"
            android:textColor="@color/operand_buttons_bg"
            android:textSize="@dimen/body_text_size" />

        <EditText
            android:id="@+id/edit_text_rate1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/enter_the_rate"
            android:textColor="@color/operand_buttons_bg"
            android:textSize="@dimen/body_text_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_job2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/job_description"
            android:textColor="@color/operand_buttons_bg"
            android:textSize="@dimen/body_text_size" />

        <EditText
            android:id="@+id/edit_text_due_rate2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/enter_the_rate"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/operand_buttons_bg"
            android:textSize="@dimen/body_text_size" />

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_line_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/note"
        android:text="+ Add Line"
        android:textColor="@color/text_light_blue" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_invoice_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top"
        android:backgroundTint="@color/note"
        android:text="Save invoice"
        android:textColor="@color/text_yellow" />

</LinearLayout>